--- a/style.css
+++ b/style.css
@@ -9,6 +9,8 @@
 
 .box1{
     display: flex;
+    justify-content: space-between;
+    align-items: center;
     background-color: aqua;
     height: 100vh;
     width: 100%;
@@ -17,11 +19,21 @@
     height:100vh ;
     width:500px ;
     background-color: rgba(0, 0, 0, 0.123);
-    text-align:justify;
+    font-size:35px ;
+    outline: none;
+    border: none;
 }
 .con-btn{
     height:100px ;
     width:100px ;
-    display:;
     justify-content: center;
+}
+.inner-box2{
+    height:100vh ;
+    width:500px ;
+    background-color: rgba(0, 0, 0, 0.123);
+    outline: none;
+    border: none;
+    font-size: 35px;
+    text-align: initial;
 }
