--- a/style.css
+++ b/style.css
@@ -35,3 +35,26 @@
     border: none;
     font-size: 35px;
 }
+@media(max-width:500px) {
+    .inner-box1{
+        height:100vh ;
+        width:200px ;
+        background-color: rgba(0, 0, 0, 0.123);
+        font-size:80px ;
+        outline: none;
+        border: none;
+    }
+    .con-btn{
+        height:80px;
+        width:100px ;
+        justify-content: center;
+    }
+    .inner-box2, textarea{
+        height:100vh ;
+        width:200px ;
+        background-color: rgba(0, 0, 0, 0.123);
+        outline: none;
+        border: none;
+        font-size: 35px;
+}
+}
